<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/settings_title">

    <!-- User can edit begin date -->
    <EditTextPreference
        android:defaultValue="@string/settings_begin_date_default"
        android:inputType="textNoSuggestions"
        android:key="@string/settings_begin_date_key"
        android:selectAllOnFocus="true"
        android:title="@string/settings_begin_date_label" />

    <!-- User can select option "oldest" or "newest" -->
    <ListPreference
        android:defaultValue="@string/settings_order_by_oldest_value"
        android:entries="@array/settings_order_by_labels"
        android:entryValues="@array/settings_order_by_values"
        android:key="@string/settings_order_by_key"
        android:title="@string/settings_order_by_label" />
</PreferenceScreen>